syntax = "proto3";

package ios; 

service Notification {
  rpc FindUserActivity(ActivityRequest) returns (ActivityPagedResponse) {}
  rpc FindMostRecentActivity(RecentActivityRequest) returns (ActivityListResponse) {}
  rpc FindActivityCount(ActivityCountRequest) returns (ActivityCountResponse) {}
  rpc UpdateActivity(UpdateActivityRequest) returns (ActivityResponse) {}

  // email stuffs
  rpc SendEmail(EmailRequest) returns (EmailResponse) {}
  rpc CreateTemplate(CreateTemplateRequest) returns (EmailResponse) {}
  rpc DeleteTemplate(DeleteTemplateRequest) returns (EmailResponse) {}
  rpc ListTemplates(ListTemplatesRequest) returns (TemplatesResponse) {}
}


// Requests
message EmailRequest {
  string emailSender = 1;
  string emailRecipient = 2;
  string subject = 3;
  string htmlBody = 4;
  string textBody = 5; 
}

message CreateTemplateRequest {
  string templateName = 1;
  string subject = 2;
  string html = 3;
  string text = 4;
}

message DeleteTemplateRequest {
  string templateName = 1;
}

message ListTemplatesRequest {
  string nextToken = 1;
}

message ActivityRequest {
    string userID = 1;
    string objectID = 2;
    uint32 page = 3;
    uint32 pageSize = 4;
}

message RecentActivityRequest {
    string objectID = 1;
    uint32 count = 2;
}

message ActivityCountRequest {
    string objectID = 1;
}

message UpdateActivityRequest {
    string activityID = 1;
    string seenAt = 2;
    string clickedAt = 3;
}

// Responses
message Template {
  string name = 1;
  string createdOn = 2;
}

message EmailResponse {
  string status = 1;
  string message = 2;
}

message TemplatesList {
  repeated Template templates = 1;
}

message TemplatesResponse {
  string status = 1;
  string message = 2;
  TemplatesList data = 3;
}


message Activity {
  string activityID = 1;
  string userID = 3;
  string type = 2;
  string objectID = 4;
  string title = 5;
  string subtitle = 6;
  string description = 7;
  string details = 8;
  string timestamp = 9;
  string clickedAt = 10;
  string seenAt = 11;
}

message UserActivityPage {
  uint32 page = 1;
  uint32 pageSize = 2; 
  uint32 total = 3;
  repeated Activity activity = 4; 
}

message ActivityPagedResponse {
  string status = 1;
  string message = 2;
  UserActivityPage data = 3;
}

message ActivityData {
  Activity activity = 1;
}

message ActivityResponse {
  string status = 1;
  string message = 2;
  ActivityData data = 3;
}

message ActivityList {
  repeated Activity activity = 1;
}

message ActivityListResponse {
  string status = 1;
  string message = 2;
  ActivityList data = 3;
}

message ActivityCount {
  uint32 count = 1;
}

message ActivityCountResponse {
  string status = 1;
  string message = 2;
  ActivityCount data = 3;
}